@@ -2,12 +2,12 @@
 
 <head>
 <meta http-equiv="Content-Language" content="en-us">
-<title>Style Task</title>
+<title>Xslt/Style Task</title>
 </head>
 
 <body>
 
-<h2><a name="style">Style</a></h2>
+<h2><a name="style">Xslt/Style</a></h2>
 <h3>Description</h3>
 <p>Process a set of documents via XSLT.</p>
 <p>This is useful for building views of XML based documentation,
@@ -29,6 +29,7 @@ inclusion/exclusion of files works, and how to write patterns.</p>
   and <code>&lt;patternset&gt;</code> elements.</p>
 <p>Style supports the use of a &lt;param&gt; element which is used to pass values 
   to an &lt;xsl:param&gt; declaration.</p>
+<p><i>&lt;style&gt; and &lt;xslt&gt; refer to the same Ant task and can be used interchangeably.</i></p>
 <p>If you want to use Xalan-J 1 or XSL:P, you also need Ant's optional.jar</p>
 <h3>Parameters</h3>
 <table border="1" cellpadding="2" cellspacing="0">
@@ -187,10 +188,10 @@ nested <code>&lt;classpath&gt;</code>, as well - that is, a
 &lt;style basedir=&quot;doc&quot; destdir=&quot;build/doc&quot;
        extension=&quot;.html&quot; style=&quot;style/apache.xsl&quot;/&gt;</pre>
   <h4>Using XSL parameters</h4>
-  <pre>&lt;style basedir=&quot;doc&quot; destdir=&quot;build/doc&quot;
-		extension=&quot;.html&quot; style=&quot;style/apache.xsl&quot;&gt;
-	&lt;param name=&quot;date&quot; expression=&quot;07-01-2000&quot;/&gt;
-  &lt;/style&gt;</pre>
+  <pre>&lt;xslt basedir=&quot;doc&quot; destdir=&quot;build/doc&quot;
+      extension=&quot;.html&quot; style=&quot;style/apache.xsl&quot;&gt;
+  &lt;param name=&quot;date&quot; expression=&quot;07-01-2000&quot;/&gt;
+&lt;/xslt&gt;</pre>
 
   <p>Then if you declare a global parameter &quot;date&quot; with the top-level
   element &lt;xsl:param name=&quot;date&quot;/&gt;, the variable
